# crafter

./: .dockerignore  .gitignore  .release-please-manifest.json  CHANGELOG.md  Dockerfile  Makefile  README.md  commit.sh  docker-compose.yaml  main.py  pyproject.toml  release-please-config.json  requirements.txt  vc.yaml  versions.json
.github/workflows/: formatting.yaml  linting.yaml  release.yaml  unit_testing.yaml
Docker/: Dockerfile
app/: __init__.py  server_core.py
app/server/: CHANGELOG.md
app/server/blueprints/: __init__.py  base.py  favicon.py  ingredient.py  item.py  product.py  recipe.py  static.py
app/server/core/: __init__.py  base.py  ingredient.py  item.py  product.py
app/server/schemas/: __init__.py  ingredient.py  item.py  recipe.py
app/server/static/: styles.css
app/server/views/: __init__.py  anchor.py  basic_tags.py  common_tags.py  form.py  generic_tags.py  heading.py  html_root.py  input.py  label.py  link.py  list_item.py  literals.py  simple_tags.py  tag.py  wrapper_tag.py
app/utils/: __init__.py  envs.py
crafter/: __init__.py  entrypoint.py
crafter/blueprints/: __init__.py  base.py
crafter/blueprints/ingredient/: __init__.py  api.py
crafter/core/: __init__.py  recipe.py
crafter/schemas/: base.py  ingredient.py  product.py
crafter/views/: common_tags.py  html_root.py  input.py  simple_tags.py  tag.py  wrapper_tag.py
k8s/: deployment.yaml  ingress.yaml  pod.yaml  service.yaml
src/server/: server_core.py
src/utils/: envs.py  file_managment.py
utils/: __init__.py  envs.py  file_management.py
(+31 files in other folders)
