[project]
name = "crafter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "flask>=3.1.0",
    "flask-restful>=0.3.10",
    "flask-smorest>=0.45.0",
    "html5lib>=1.1",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.3",
]

[project.scripts]
server = "app:server_main"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["server/static/*"]
